Отправка айди факультета вместо его названия при регистрации
